infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: vrilance.dev
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: Prefix
            defaultBackend:
              service:
                name: ta-auth-srv
                port:
                  number: 3000
          - path: /api/jobscat/?(.*)
            pathType: Prefix
            defaultBackend:
              service:
                name: ta-jobs-category-srv
                port:
                  number: 3000
          - path: /api/orders/?(.*)
            pathType: Prefix
            defaultBackend:
              service:
                name: ta-orders-srv
                port:
                  number: 3000
          - path: /api/ratingreview/?(.*)
            pathType: Prefix
            defaultBackend:
              service:
                name: ta-rating-review-srv
                port:
                  number: 3000
          - path: /api/searchrecommendation/?(.*)
            pathType: Prefix
            defaultBackend:
              service:
                name: ta-search-recommendations-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            defaultBackend:
              service:
                name: ta-client-srv
                port:
                  number: 3000
